# blitz-2023-inscription

./: .gitignore  Cargo.toml  README.md  analyze_sweep.py  application.py  bot.py  bot_test.py  collect_games.py  game_message.py  pathfinding.py  requirements.txt  seen_games.py  server.py  visualize_ants.py
benches/: benchmark.rs
games/: 35334.json  38643.json  README.md
rust/: .gitignore  Cargo.toml  hyperparams.json
rust/benches/: benchmark.rs
rust/src/: ant_colony_optimization.rs  bot.rs  branch_and_bound_tsp.rs  challenge.rs  challenge_consts.rs  client.rs  game_interface.rs  game_interface_traits.rs  graph.rs  held_karp.rs  lib.rs  macro_ai.rs  main.rs  micro.rs  micro_ai.rs  pathfinding.rs
src/: README.md  ant_colony_optimization.rs  bot.rs  branch_and_bound_tsp.rs  challenge.rs  challenge_consts.rs  graph.rs  held_karp.rs  lib.rs  macro_ai.rs  main.rs  micro_ai.rs  pathfinding.rs  simple_ant_colony_optimization.rs  simple_graph.rs  simple_held_karp.rs  simple_pathfinding.rs  solvers.rs
tools/: .gitignore  README.md  analyze_sweep.py  collect_games.py  deduce_score.py  hyperparams.py  leaderboard.py  prepare_version.sh  requirements.txt  server.py  visualize_ants.py
