[package]
name = "blitz_bot"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
debug = true  # Use only when profiling

[[bin]]
name = "application" # Don't change this, our backend expects a fixed binary path
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["macros", "rt"] }
tokio-tungstenite = "0.17"
dotenvy = "0.15"
env_logger = "0.9"
log = "*"
priority-queue = "1.2.3"
thiserror  = "1.0"
rand = { version = "0.8.5", features = [ "small_rng" ] }
smallvec = "1.10.0"
arrayvec = "0.7.2"

[dev-dependencies]
criterion = "0.3"
